operator/cmd/mesh/testdata/manifest-generate/input-extra-resources/gateways.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-ingressgateway-ns
  labels:
    istio-injection: disabled
